Closed Bug 94248 Opened 23 years ago Closed 23 years ago

Fix uninitialized mCursor crash

Categories

(Core :: CSS Parsing and Computation, defect)

x86
All
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: jesup, Assigned: pierre)

Details

(Keywords: crash)

Attachments

(1 file)

mCursor is uninitialized, and if it happens to have the wrong value and the
wrong call is made, it can crash.  I found this with code that trashes all
memory allocations (dmalloc).  This patch used to be part of bug 90545 (because
I fixed it while working on that bug) but I'm splitting it out since it's not an
actual  nsVoidArray/nsSupportsArray change.
Keywords: crash, patch
Fixed. Thanks Randell.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verfied as per comments.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: