bug 94248: uninitialized variable in nsCSSUserInterface::mCursor. fix from rjesup@wgate.com, r=pierre